--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,8 +97,11 @@ input.post-text {
 .video-controls {
     display: none;
     position: absolute;
-    right: 5px;
-    top: 5px;
+    bottom: 0px;
+    left: calc(50% - 50px);
+    padding: 5px;
+    border-radius: 5px;
+    background-color: white;
 }
 .video-controls_active {
     display: flex;
