--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,6 +167,7 @@ input.post-text {
     width: 500px;
     position: fixed;
     top: 10px;
+    margin-bottom: 10px;
 }
 .search-form {
     width: 200px;
